--- a/index.html
+++ b/index.html
@@ -12,21 +12,14 @@
                 <button id="loginbtn">login</button>
             <dialog id="dialog">
                 <button id="closedialog">close</button>
-                <form action="login.php" method="post">
-                    <div>
-                        <label for="username">username</label>
-                        <input type="text" id="username" name="username">
-                    </div>
-                    <div>
-                        <label for="password">password</label> <br>
-                        <input type="password" id="password" name="password">
-                    </div>
+                <div id="welcome-message"></div> <!-- Placeholder for the welcome message -->
 
-                    <div>
-                        <button type="submit">login</button>
-                    </div>
+    <form id="login-form" action="login.php" method="post">
+        <input type="text" name="username" placeholder="Username" required>
+        <input type="password" name="password" placeholder="Password" required>
+        <button type="submit" name="submit">Login</button>
+    </form>
 
-                </form>
             </dialog>
     </div>
 
